# fractonica

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/control-center/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/control-center/src/: App.test.tsx  App.tsx  RecordsWorkspace.tsx  api.test.ts  api.ts  app.css  client-core.test.ts  client-core.ts  format.ts  main.tsx  use-node-status.ts
apps/desktop/: README.md  package.json
apps/desktop/scripts/: allow-local-network.ps1  build.mjs  prepare-sidecar.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/windows/: nsis-hooks.nsh
apps/mobile/: .gitignore  README.md  app.json  eas.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx  pair.tsx
apps/mobile/plugins/: with-loopback-pairing-transport.js  with-user-script-sandboxing-disabled.js
contracts/: LICENSE
contracts/glyph/: v1.json
contracts/openapi/: api.yaml  services.yaml  v1.yaml  v2.yaml
contracts/protocol/: README.md
crates/fractonica-api/: Cargo.toml
crates/fractonica-api/src/: lib.rs
crates/fractonica-application/: Cargo.toml
crates/fractonica-application/src/: authorization.rs  lib.rs  tests.rs
crates/fractonica-blob-store/: Cargo.toml
crates/fractonica-blob-store/src/: lib.rs
crates/fractonica-client/: Cargo.toml  README.md
crates/fractonica-client-content/: Cargo.toml  README.md
crates/fractonica-client-runtime/: Cargo.toml  README.md
crates/fractonica-client-runtime/src/: lib.rs  tests.rs
crates/fractonica-client-sqlite/: Cargo.toml  README.md
crates/fractonica-client-sqlite/migrations/: 0001_client_store.sql  0002_local_installation.sql  0003_record_previews.sql  0004_peer_delivery_policy.sql  0005_peer_transport_credentials.sql
crates/fractonica-client-sqlite/schema/: client_store.sql  local_installation.sql  peer_delivery_policy.sql  peer_transport_credentials.sql  record_previews.sql
crates/fractonica-client-sqlite/src/: lib.rs  tests.rs
crates/fractonica-client/src/: lib.rs  tests.rs
crates/fractonica-content/: Cargo.toml
crates/fractonica-content/src/: lib.rs
crates/fractonica-core/: Cargo.toml
crates/fractonica-data-model/: Cargo.toml  SCHEMAS.md
crates/fractonica-data-model/src/: canonical.rs  lib.rs  tests.rs
crates/fractonica-glyph/: Cargo.toml
crates/fractonica-glyph/src/: lib.rs  spec_generated.rs
crates/fractonica-keystore/: Cargo.toml  README.md
crates/fractonica-keystore/src/: filesystem.rs  lib.rs  pairing.rs
crates/fractonica-mobile-ffi/: Cargo.toml  README.md  uniffi.toml
crates/fractonica-mobile-ffi/src/: lib.rs
crates/fractonica-node/: Cargo.toml
crates/fractonica-node/src/: bootstrap.rs  durable_pairing.rs  installation.rs  lib.rs  main.rs
crates/fractonica-pairing/: Cargo.toml
crates/fractonica-pairing/src/: lib.rs
crates/fractonica-peer/: Cargo.toml
crates/fractonica-peer/src/: lib.rs
crates/fractonica-replication/: Cargo.toml
crates/fractonica-saros-engine/: Cargo.toml
crates/fractonica-saros-engine/src/: lib.rs
crates/fractonica-saros-geo/: Cargo.toml
crates/fractonica-space-bootstrap/: Cargo.toml
crates/fractonica-space-bootstrap/src/: lib.rs
crates/fractonica-store-sqlite/: Cargo.toml
crates/fractonica-store-sqlite/migrations/: 0001_node_installation.sql  0002_operation_log.sql  0003_content_store.sql  0004_signed_spaces.sql  0005_pairing_lifecycle.sql  0006_peer_request_replay.sql  0007_client_contract.sql  0008_peer_transport_credentials.sql  0009_paired_device_activity.sql  0010_pairing_handshake_replay.sql  test_0004_signed_spaces.py
crates/fractonica-store-sqlite/schema/: client_contract.sql  content_store.sql  node_installation.sql  operation_log.sql  paired_device_activity.sql  pairing_handshake_replay.sql  pairing_lifecycle.sql  peer_request_replay.sql  peer_transport_credentials.sql  signed_spaces.sql
crates/fractonica-store-sqlite/src/: lib.rs  pairing_repository.rs  signed_repository.rs
crates/fractonica-sync/: Cargo.toml  README.md
crates/fractonica-sync/src/: lib.rs  tests.rs
crates/fractonica-temporal-core/: Cargo.toml
crates/fractonica-trust/: Cargo.toml
crates/fractonica-trust/contracts/: operation-v2.cddl  operation.cddl
crates/fractonica-trust/fixtures/: README.md  operation-v2.json  operation.json
crates/fractonica-trust/src/: lib.rs
crates/fractonica-windows-protection/: Cargo.toml
crates/fractonica-windows-protection/src/: lib.rs
docs/: README.md  architecture.md  client-core.md  content-storage.md  data-provenance.md  glyphs.md  operation-log.md  replication.md  saros-engine.md  self-hosting.md  signed-operation-api.md  threat-model.md
docs/adr/: 0001-monorepo.md  0002-rust-core-cpp-esp-idf-helpers.md  0003-node-helper-boundary.md  0004-sqlite-first.md  0005-saros-engine.md  0006-canonical-octal-glyphs.md  0007-causal-operation-log.md  0008-content-addressed-resources.md  0009-signed-operation-trust-kernel.md  0010-space-capabilities-and-pairing.md  0011-noise-pairing-handshake.md  0012-authenticated-peer-reads.md  0013-client-domain-and-projection-contract.md  0014-react-native-mobile-client.md  0015-workspace-mesh-linking.md
firmware/: README.md
scripts/mobile/: build-android.sh  build-ios.sh  build-native.sh  generate-bindings.sh
sdk/embedded-c/: CMakeLists.txt  LICENSE  README.md
sdk/embedded-c/include/fractonica/embedded/: glyph.h  glyph_spec.generated.h  temporal.h
sdk/embedded-c/src/: glyph.c  temporal.c
sdk/embedded-c/tests/: glyph_cpp_consumer_test.cpp  glyph_test.c  temporal_test.c
tools/glyph/: generate-glyph-artifacts.mjs
tools/import-exeligmos/: README.md  package.json  tsconfig.json
tools/saros-data/: generate-reviewed-geometry.mjs
tools/uniffi-bindgen/: Cargo.toml
(+44 files in other folders)
