[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/fractonica-api",
    "crates/fractonica-core",
    "crates/fractonica-node",
    "crates/fractonica-saros-engine",
    "crates/fractonica-saros-geo",
    "crates/fractonica-store-sqlite",
    "crates/fractonica-temporal-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "AGPL-3.0-or-later"
repository = "https://github.com/fractonica/fractonica"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.2", features = ["derive", "env"] }
directories = "6.0.0"
fractonica-api = { path = "crates/fractonica-api" }
fractonica-core = { path = "crates/fractonica-core" }
fractonica-saros-engine = { path = "crates/fractonica-saros-engine" }
fractonica-saros-geo = { path = "crates/fractonica-saros-geo" }
fractonica-store-sqlite = { path = "crates/fractonica-store-sqlite" }
fractonica-temporal-core = { path = "crates/fractonica-temporal-core" }
fs4 = "1.1.0"
http-body-util = "0.1.4"
libc = "0.2.186"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
subtle = "2.6.1"
tempfile = "3.27.0"
tauri = "2.11.5"
tauri-build = "2.6.3"
tauri-plugin-shell = "2.3.5"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.24.0", features = ["serde", "v4", "v7"] }
