[package]
name = "fractonica-api"
description = "Loopback HTTP API and OpenAPI document for Fractonica nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
fractonica-store-sqlite.workspace = true
fractonica-glyph.workspace = true
fractonica-saros-engine.workspace = true
fractonica-temporal-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
subtle.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
