[package]
name = "fractonica-application"
description = "Application use cases and persistence ports for Fractonica nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-core.workspace = true
fractonica-content.workspace = true
fractonica-data-model.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
