[package]
name = "fractonica-blob-store"
description = "Atomic filesystem content storage and resumable upload coordination"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-application.workspace = true
fractonica-content.workspace = true
libc.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
fractonica-store-sqlite.workspace = true
tempfile.workspace = true
