[package]
name = "fractonica-client-runtime"
description = "Platform-neutral lifecycle and local-first application service for native Fractonica clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-application.workspace = true
fractonica-client.workspace = true
fractonica-client-content.workspace = true
fractonica-client-sqlite.workspace = true
fractonica-content.workspace = true
fractonica-data-model.workspace = true
fractonica-keystore.workspace = true
fractonica-peer.workspace = true
fractonica-space-bootstrap.workspace = true
fractonica-sync.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
