[package]
name = "fractonica-client-sqlite"
description = "Durable local-first SQLite store and per-peer outbox for Fractonica clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-data-model.workspace = true
fractonica-peer.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
fractonica-client.workspace = true
tempfile.workspace = true
