[package]
name = "fractonica-glyph"
description = "Canonical allocation-free octal glyph grammar, geometry, and rasterization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
libm.workspace = true
