[package]
name = "fractonica-keystore"
description = "Platform key-storage boundary and hardened filesystem identity bootstrap for Fractonica"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-pairing.workspace = true
fractonica-trust.workspace = true
fs4.workspace = true
getrandom.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
fractonica-windows-protection = { path = "../fractonica-windows-protection" }

[dev-dependencies]
fractonica-data-model.workspace = true
tempfile.workspace = true
