[package]
name = "fractonica-mobile-ffi"
description = "Versioned UniFFI facade for native Fractonica mobile clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64.workspace = true
fractonica-client-runtime.workspace = true
fractonica-client-sqlite.workspace = true
fractonica-content.workspace = true
fractonica-data-model.workspace = true
fractonica-keystore.workspace = true
fractonica-pairing.workspace = true
fractonica-peer.workspace = true
fractonica-trust.workspace = true
getrandom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
zeroize.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
