[package]
name = "fractonica-node"
description = "Headless Fractonica node daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
directories.workspace = true
fractonica-api.workspace = true
fractonica-application.workspace = true
fractonica-blob-store.workspace = true
fractonica-data-model.workspace = true
fractonica-keystore.workspace = true
fractonica-pairing.workspace = true
fractonica-space-bootstrap.workspace = true
fractonica-store-sqlite.workspace = true
fs4.workspace = true
getrandom.workspace = true
libc.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }
