[package]
name = "fractonica-peer"
description = "Canonical authenticated peer request proofs for Fractonica nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-trust.workspace = true
thiserror.workspace = true

