[package]
name = "fractonica-saros-engine"
description = "Standalone Fractonica Saros engine composed from temporal and eclipse geometry catalogs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-saros-geo.workspace = true
fractonica-temporal-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
