[package]
name = "fractonica-store-sqlite"
description = "SQLite persistence adapter for Fractonica nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fractonica-application.workspace = true
fractonica-content.workspace = true
fractonica-core.workspace = true
fractonica-data-model.workspace = true
fractonica-pairing.workspace = true
fractonica-peer.workspace = true
fractonica-trust.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
