[package]
name = "fractonica-sync"
description = "Supervised bounded synchronization worker for native Fractonica clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
fractonica-application.workspace = true
fractonica-client-content.workspace = true
fractonica-client-sqlite.workspace = true
fractonica-content.workspace = true
fractonica-data-model.workspace = true
fractonica-peer.workspace = true
getrandom.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
axum.workspace = true
fractonica-client.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
