[package]
name = "fractonica-trust"
description = "Self-certifying identities and deterministic signed-operation primitives for Fractonica"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "AGPL-3.0-or-later"
repository = "https://github.com/fractonica/fractonica"

[dependencies]
ed25519-dalek = { version = "3.0.0", default-features = false, features = ["alloc", "zeroize"] }
half = { version = "2.7.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.11.0", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
uuid = { version = "1.24.0", default-features = false }
zeroize = { version = "1.9.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.150"
