[package]
name = "fractonica-windows-protection"
description = "Minimal safe boundary around Windows DPAPI for Fractonica"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }
