[package]
name = "fractonica-desktop"
description = "Tauri desktop supervisor for a local Fractonica node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
