[package]
name = "fractonica-desktop"
description = "Tauri desktop supervisor for a local Fractonica node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
fractonica-client-runtime.workspace = true
fractonica-client-sqlite.workspace = true
fractonica-content.workspace = true
fractonica-data-model.workspace = true
fractonica-sync.workspace = true
mime_guess.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serde_json.workspace = true
